--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
   "name": "gl-test-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~43.0.2",
+    "@react-three/fiber": "^8.0.0-beta-02",
+    "expo": "~43.0.3",
+    "expo-gl": "^11.0.3",
+    "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "expo-updates": "~0.10.15",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.66.3",
+    "react-native-gesture-handler": "~1.10.3",
+    "react-native-reanimated": "~2.2.4",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.9.0",
+    "react-native-web": "0.17.5",
+    "three": "^0.134.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5"
+    "@babel/core": "^7.16.0",
+    "@types/react": "~17.0.35",
+    "@types/react-native": "~0.66.4",
+    "typescript": "~4.5.2"
   },
   "private": true
 }
